sharetunes-app/src/components/pages/DiscoverPage/discoverPage.module.scss
.discoverPage{
    display: flex;
    flex-direction: row;
}

.discoverSidebar{
    flex: 1;
    padding-top: 20px;
    width: 300px;
}

.sideBarText{
    font-weight: bold;
    width: 300px;
}

.popularSongs{
    margin-bottom: 20px;
}

.recommendedSongs {
    margin-bottom: 20px;
}

.songCard{
    margin: 10px;
    height: 65px;
    display: flex;
    flex-direction: row;
    border-style: solid;
    border-width: 1px;
    border-color: #BFBFBF;
    border-radius: 2px;
}

.songCardImage{
    height: 64px;
    width: 64px;
}

.songCardSong{
    flex:2;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    width: 130px;
}

.songCardTitle{
    display: flex;
    flex-direction: row;
    padding-left: 5px;
    width: 130px;
}

.songCardTitleText{
    padding-left: 5px;
    margin-left: 2px;
    width: 100px;
}

.songCardTitleText p {
    overflow-x: hidden;
    white-space: nowrap;
    transition: text-indent 60s linear;
}

.songCardTitleText:hover p {
    text-indent: -3000px;
}

.songCardTitleImage{
    height:19px;
    width:19px;
    align-self: center;
    margin-right: 5px;
}

.songCardPlayer{
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #FEC46E;
    width: 63px;
}

.songCardPlayerImage{
    height: 30px;
    width: 30px;
    align-self: center;
    fill: white;
}

.discoverFeed{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: left;
    align-items: center;
    align-content: space-evenly;
    padding: 20px;
    flex:4;
}

.card{
    width: 302px;
    height: 342px;
    border-style: solid;
    border-width: 1px;
    border-color: #BFBFBF;
    border-radius: 2px;
    align-self: center;
    margin: 10px;
}

.header {
    width: 300px;
    height: 40px;
    background-color: WHITE;
    display: flex;
    justify-content: left;
}

.userPicture {
    margin: 5px;
    margin-right: 20px;
    align-self: center;
    width: 25px;
    height: 25px;
    border-style: solid;
    border-width: 1px;
    border-color: #BFBFBF;
    border-radius: 50%;
}

.settingsBtn{
    width: 25px;
    height: 25px;
    align-self: center;
    margin-right: 10px;
    flex:1;
}

.buttonSvg{
    width: 20px;
    height: 20px;
    padding-top: 1px;
}

.userName {
    align-self: center;
    flex:10;
}

.bottom{
    position: relative;
}

.image{
    bottom:0;
}

.title {
    display: flex;
    flex-direction: row;
}

.titleImage{
    fill: white;
    height: 19px;
    width: 19px;
    padding-left: 5px;
    align-self: center;
}

.titleText {
    padding-left: 5px;
    width:276px;
    align-self: center;
    overflow-x: hidden;
    text-overflow:ellipsis;
    white-space: nowrap;
}

.songInfo{
    width: 300px;
    height: 60px;
    position: absolute;
    bottom:4px;
    background-color: black;
    opacity: 80%;
    color:white;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

